# c-workspace

./: .gitignore  .gitmodules  main.c  serialComms.py
c++/: main.cpp
c++/ex5/: problem4.cpp  problem4.hpp
cMake/: CMakeLists.txt  cmakeTest.c
cMake/lib/basicMath/: basicMath.c  basicMath.h
cMake/lib/stupidMath/: stupidMath.c  stupidMath.h
pico-ice-rosserial/: CMakeLists.txt  cmakeTest.c  main.c
test/: main.c
